--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,13 +5,15 @@
         = current_user.name
       .side_top_box_tag
         .side_top_box_tag_icon
-          = link_to "#", class: "link_btn" do
+          = link_to new_group_path do
             = icon('fas', 'edit', class: 'icon')
           = link_to edit_user_path(current_user) do
             = icon('fas', 'cog', class: 'icon')
   .side_ber
-    .side_ber_groups
-      .side_ber_groups_name
-        %p tecchamp
-      .side_ber_groups_massege
-        %p まだメッセージがありません
+    - current_user.groups.each do |group|
+      .side_ber_groups
+        = link_to '#' do
+          .side_ber_groups_name
+            = group.name
+          .side_ber_groups_massege
+            %p まだメッセージがありません
