--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -12,8 +12,8 @@
   .side_ber
     - current_user.groups.each do |group|
       .side_ber_groups
-        = link_to '#' do
+        = link_to group_messages_path(group) do
           .side_ber_groups_name
             = group.name
           .side_ber_groups_massege
-            %p まだメッセージがありません
+            = group.show_last_message
