メッセージの非同期化

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -11,7 +11,7 @@ $glay: #999999;
 }
 
 .wrapper {
-  // height: 100vh;
+  height: 100vh;
   width: 100vw;
   display: flex;
 }
@@ -102,9 +102,12 @@ $glay: #999999;
       }
     }
   }
+  .main_contents_box_masseges {
+    height: calc(100vh - 190px);
+    overflow: auto;
+  }
   &_contents {
     background-color: #fafafa;
-    // height: calc(100vh - 190px);
     &_box {
       padding: 35px 0 0 40px;
       &_log { 
