自動更新更新機能の追加

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,5 +1,4 @@
-.main_contents
-  
+.main_contents{data: {message: {id: message.id}}}
   .main_contents_box
     .main_contents_box_log
       .main_contents_box_log_name
