--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -65,6 +65,9 @@ $glay: #999999;
         color: $siro2;
         font-size: 11px;
       }
+      a {
+        text-decoration: none;
+      }
     }
   }
 }
